--- a/modules/1237/pages/image7-right-page.adoc
+++ b/modules/1237/pages/image7-right-page.adoc
@@ -40,40 +40,39 @@ image::07-right-page.png[link=self]
 [verse]
 ____
 ad Nro. 322  
-Res Kam.  
+Res Cam.  
 wie ad Nro. 317.  
 
 Auch wäre an den Inhalt  
-des Kam. Rescripts dd  
-15 April 1799 in Betreff  
-der Hecken-[Austrie struck out] und  
-Befriedigungs-Ausrückung  
-der Wald-Angrenzer  
+des Cam. Rescripts dd  
+15. April 1799 in Betreff  
+der Hecken– und  
+Befriedigungs–Ausrückung  
+der Wald–Angrenzer  
 des Dorfs Berenbusch  
 zu erinnern. B. 27.  
 Octbr 1800  
 
-            M. K.
+        M. K.
 ____
 
 |
 [verse]
 ____
-re: No. 322  
-Chamberal Decision  
-as with No. 317.  
+Re: No. 322  
+Chamber directive  
+as in No. 317.  
 
 It should also be recalled  
-with regard to the contents  
-of the Chamber rescript dated  
-15 April 1799, concerning  
-the hedgerow [Austrei struck out] and  
-the boundary clearing  
-of the forest-adjoining properties  
-of the village of Berenbusch.  
-B. 27  
-October 1800  
+that the contents of the Chamber  
+Directive dated 15 April 1799  
+concerning the hedgerows and  
+demarcation of boundaries  
+for the forest-adjacent  
+lands of the village of Berenbusch  
+still apply.  
+Recorded 27 October 1800  
 
-            M. K.
+        M. K.
 ____
 |===
