--- a/modules/1237/pages/image7-right-page.adoc
+++ b/modules/1237/pages/image7-right-page.adoc
@@ -76,3 +76,26 @@ Recorded 27 October 1800
         M. K.
 ____
 |===
+
+=== Glossary of Terms
+
+Befriedigung:: In historical land administration, this refers to the "enclosure" or "fencing-in" of land—often to
+delineate property boundaries or to protect cultivated areas. It can also imply the legal securing or defining of
+property rights through physical demarcation.
+
+Ausrückung:: Literally "setting out" or "staking out." In this context, it refers to the act of marking or laying
+out the boundaries—typically by surveyors or forestry officials. It denotes the physical demarcation of parcels of
+land or forest edges.
+
+Angrenzer:: Adjacent landholder or neighbor. Specifically, "Wald-Angrenzer" refers to the properties or landowners
+that border the forest—those whose land abuts woodland areas.
+
+Cam. Rescript (Res Cam):: Abbreviation of Cammer-Rescript. An official directive or ruling issued by the fiscal
+authority (Cammer). In English, often rendered as “Chamber Directive” or “Chamber Instruction.”
+
+dd:: Abbreviation of Latin de dato, meaning "dated." Used to indicate that a document bears a specific date.
+
+B. (as in "B. 27. Octbr"):: Abbreviation of "Berichtet" or "Bearbeitet" (Reported or Processed). Indicates the
+administrative date when the document or note was entered or logged by the office.
+
+
