--- a/modules/1237/pages/image7-right-page.adoc
+++ b/modules/1237/pages/image7-right-page.adoc
@@ -1,4 +1,4 @@
-= = Reminder Note Regarding Chamber Directive on Berenbusch Woodland Boundaries (1800)
+= Reminder Note Regarding Chamber Directive on Berenbusch Woodland Boundaries (1800)
 :page-role: wide
 
 This text is a brief note regarding the previous documenmt that was sent and also referencing yet another document.
