--- a/modules/1237/pages/image8-right-page.adoc
+++ b/modules/1237/pages/image8-right-page.adoc
@@ -1,9 +1,12 @@
-= Document 4½: Surveyor's Drawing of Two Parcels 
+= Document 4½: Surveyor's Drawing of Two Parcels (March 30, 1799)
 :page-role: wide
 
 Document 4½ is signed by Lieutenant Funck, a "beeidigter Landmesser" (sworn land surveyor). As a technical specialist, Funck was not part of the
 administrative offices (Amt) that issued Document 4. His report was therefore xref:image1.adoc[logged] as an independent piece of correspondence,
 even though it accompanied xref:image6-right-page.adoc[document 4].
+
+NOTE: The surveyor's document and drawing was completee over a year before it was enclosed in xref:image6-right-page.adoc[document 4], which is
+dated October 18, 1800. 
 
 image::08-right-page.png[link=self]
 
