--- a/modules/1237/pages/image2-forestry-report.adoc
+++ b/modules/1237/pages/image2-forestry-report.adoc
@@ -36,7 +36,7 @@ Short for *praesentiert*, meaning “presented” or “submitted” on this dat
 [verse]
 ____
 Cam: Nr: 662.                                    Nr: 1.
-Res Can
+Res Cam
 
 zum Forstamts Bericht.                   praes: 30. May 1798.
 B. 14. Jun. 1798
