--- a/modules/1237/pages/image2-forestry-report.adoc
+++ b/modules/1237/pages/image2-forestry-report.adoc
@@ -1,8 +1,20 @@
 = Forestry Office Report
 :page-role: wide
 
-In this image, only the forestry report is present. The text to its right and below it, 
-visible in the xref:image2-intro.adoc[complete image], have been removed.
+Jobst Heinrich Krückeberg likely submitted his petition in person to the Amt (local office) in Bückeburg on or
+before 29 May 1798. We know this because the xref:image1.doc[Document Index] records May 29, 1798, as the date of
+the "Petition of tenant farmer Krückeberg No. 10 in Berenbusch".
+
+It is very likely that someone in the Amt formally composed or transcribed Jobst Heinrich Krückeberg’s petition
+onto official paper.  The Amt also compiled a brief Forestry report onto the same official paper and forwarded the
+document to the Cammer (central fiscal authority). The Cammer received and registered the document on 30 May 1798,
+assigning it an internal registry number “Cam: Nr: 662” and classifying it as a rescript (“Res Cam”). These labels
+were written in the upper-left corner by the Cammer as part of its document tracking process. The one-day
+discrepancy between 29 May (document dated by the Amt) and 30 May (date of presentation at the Cammer) simply
+reflects this administrative transfer.
+
+NOTE: In this image, only the forestry report is present. The text to its right and below it, visible in the
+xref:image2-intro.adoc[complete image], have been removed.
 
 image::02-forestry-report.png[link=self]
 
