--- a/modules/1237/pages/image2-forestry-report-and-petition.adoc
+++ b/modules/1237/pages/image2-forestry-report-and-petition.adoc
@@ -1,4 +1,4 @@
-= Forestry Office Report
+= = Petition and Forestry Office Assessment Regarding Land Expansion (Document 1, 29–30 May 1798) 
 :page-role: wide
 
 Jobst Heinrich Krückeberg likely submitted his petition in person to the Amt (local office) in Bückeburg on or
@@ -6,15 +6,21 @@ before 29 May 1798. We know this because the xref:image1.doc[Document Index] rec
 the "Petition of tenant farmer Krückeberg No. 10 in Berenbusch".
 
 It is very likely that someone in the Amt formally composed or transcribed Jobst Heinrich Krückeberg’s petition
-onto official paper.  The Amt also compiled a brief Forestry report onto the same official paper and forwarded the
-document to the Cammer (central fiscal authority). The Cammer received and registered the document on 30 May 1798,
-assigning it an internal registry number “Cam: Nr: 662” and classifying it as a rescript (“Res Cam”). These labels
-were written in the upper-left corner by the Cammer as part of its document tracking process. The one-day
-discrepancy between 29 May (document dated by the Amt) and 30 May (date of presentation at the Cammer) simply
-reflects this administrative transfer.
+onto official paper, and Jobst Heinrich did not do this himself. The Amt also compiled a brief Forestry report
+onto the same official paper and forwarded the document to the Cammer (central fiscal authority). The phrase
+*"praes: 30. May 1798"* (short for praesentiert, presented) was written by the Amt, and it indicates the date the
+document was formally forwarded or submitted to the Cammer. 
 
-NOTE: In this image, only the forestry report is present. The text to its right and below it, visible in the
-xref:image2-intro.adoc[complete image], have been removed.
+The Cammer (also located in Bückeburg) officially registered the document on 14 June 1798 (B. 14. Jun. 1798),
+assigning it an internal reference number “Cam: Nr: 662” and marking it as “Res Cam,” meaning it was formally
+filed and entered into the chamber’s registry for further handling.
+
+These labels were written in the upper-left corner by the Cammer as part of its document tracking process. The
+one-day discrepancy between 29 May (document dated by the Amt) and 30 May (date of presentation at the Cammer)
+simply reflects this administrative transfer.
+
+NOTE: In this image, only the forestry report is present. The petition text to its right and below it, visible in the
+xref:image2-intro.adoc[complete image], has been removed.
 
 image::02-forestry-report.png[link=self]
 
@@ -73,12 +79,13 @@ ____
 |
 [verse]
 ____
-Chamber: No. 662.                          No. 1.
-Chamber rescript:
-
-regarding the Forestry Office report.     presented: 30 May 1798.
-Recorded: 14 June 1798
-            MK
+Chamber Registry No. 662
+Document No. 1
+Filed by the Cammer (“Res Cam”)
+Regarding: Forestry Office Report
+Presented to the Cammer: 30 May 1798
+Recorded by the Office: 14 June 1798
+Initials: MK
 
 The requested plot lies
 in the village street of
@@ -98,13 +105,9 @@ for each poplar that is felled.
 ____
 |===
 
-== Definitions
+== Glossary of Terms
 
-[.glossary]
-dreÿ:: Archaic form of *drei* (three). The long "ÿ" was often used for stylistic reasons, especially in handwritten formal texts.
+Res Cam:: Abbreviation for "Rescriptum Cammerae" (Latin), meaning “Filed by the Cammer” or “Registered by the Chamber.”
 Papplen:: Variant spelling of *Pappeln* (poplars), with double "p" and "l" — not corrected in transcription.
 Maas:: Likely the surname of the forestry official, signed in an ornate hand at the bottom.
 
-== Notes
-
-This transcription preserves original spelling, punctuation, and spacing as found in the 1798 manuscript. No modernizations have been applied.
