--- a/modules/1237/pages/image2-forestry-report-and-petition.adoc
+++ b/modules/1237/pages/image2-forestry-report-and-petition.adoc
@@ -6,18 +6,19 @@ before 29 May 1798. We know this because the xref:image1.doc[Document Index] rec
 the "Petition of tenant farmer Krückeberg No. 10 in Berenbusch".
 
 It is very likely that someone in the Amt formally composed or transcribed Jobst Heinrich Krückeberg’s petition
-onto official paper, and Jobst Heinrich did not do this himself. The Amt also compiled a brief Forestry report
+onto official paper, and that Jobst Heinrich did not write it himself. The Amt also compiled a brief Forestry Report
 onto the same official paper and forwarded the document to the Cammer (central fiscal authority). The phrase
-*"praes: 30. May 1798"* (short for praesentiert, presented) was written by the Amt, and it indicates the date the
-document was formally forwarded or submitted to the Cammer. 
+*"praes: 30. May 1798"* (short for praesentiert, presented) was written by the Amt to indicate the date the
+document was formally forwarded or submitted to the Cammer.
 
-The Cammer (also located in Bückeburg) officially registered the document on 14 June 1798 (B. 14. Jun. 1798),
-assigning it an internal reference number “Cam: Nr: 662” and marking it as “Res Cam,” meaning it was formally
+The Cammer (also located in Bückeburg) officially registered the document on 14 June 1798 (*B. 14. Jun. 1798*),
+assigning it the internal reference number *“Cam: Nr: 662”* and marking it as *“Res Cam”*, meaning it was formally
 filed and entered into the chamber’s registry for further handling.
 
-These labels were written in the upper-left corner by the Cammer as part of its document tracking process. The
-one-day discrepancy between 29 May (document dated by the Amt) and 30 May (date of presentation at the Cammer)
-simply reflects this administrative transfer.
+These labels were written in the upper-left corner by the Cammer as part of its document tracking process.
+The one-day discrepancy between 29 May (when the petition was composed or recorded at the Amt) and 30 May (when it
+was formally forwarded to the Cammer) reflects the administrative sequence of submission and transfer—not
+necessarily when it was received or reviewed by the Cammer.
 
 NOTE: In this image, only the forestry report is present. The petition text to its right and below it, visible in the
 xref:image2-intro.adoc[complete image], has been removed.
