--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -4,7 +4,7 @@
 * xref:timeline.adoc[]
 * xref:image1.adoc[]
 * xref:image2-intro.adoc[]
-** xref:image2-forestry-report.adoc[]
+** xref:image2-forestry-report-and-petition.adoc[]
 //** xref:image2-honorifics.adoc[]
 ** xref:image2-written-request.adoc[]
 ** xref:image2-admin-note.adoc[]
