--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -3,8 +3,7 @@
 * xref:cover.adoc[]
 * xref:timeline.adoc[]
 * xref:image1.adoc[]
-* xref:image2-intro.adoc[]
-** xref:image2-forestry-report-and-petition.adoc[]
+* xref:image2-forestry-report-and-petition.adoc[]
 ** xref:image2-written-request.adoc[]
 ** xref:image2-admin-note.adoc[]
 * xref:image3-overview.adoc[] 
