--- a/modules/1237/pages/image2-forestry-report-and-petition.adoc
+++ b/modules/1237/pages/image2-forestry-report-and-petition.adoc
@@ -179,6 +179,9 @@ for each poplar that is felled.
 ____
 |===
 
+== Adminstrative Note
+
+
 == Glossary of Terms
 
 === Glossary of Terms in Petition
