--- a/modules/1237/pages/image2-forestry-report-and-petition.adoc
+++ b/modules/1237/pages/image2-forestry-report-and-petition.adoc
@@ -1,4 +1,4 @@
-= Petition and Forestry Office Assessment Regarding Land Expansion (Document 1, 29–30 May 1798) 
+= Document 1: Petition and Forestry Office Assessment Regarding Land Expansion (Document 1, 29–30 May 1798) 
 :page-role: wide
 
 Jobst Heinrich Krückeberg likely submitted his petition in person to the Amt (local office) in Bückeburg on or
