--- a/modules/1237/pages/image2-forestry-report-and-petition.adoc
+++ b/modules/1237/pages/image2-forestry-report-and-petition.adoc
@@ -26,7 +26,7 @@ Jobst Heinrich's written request is the smaller text found on the Forestry Depar
 The salution of his request is to the right of the text of the Forestry Department. The request itself
 begins below the Forestry Department Report and continues on the backside of the page where it concludes.
 
-[cols="1a,1a"]
+[cols="1a,1a",frame="none",grid="none"]
 |===
 |Document 1 font side|Document 1 backside
 
