--- a/modules/1237/pages/image2-forestry-report-and-petition.adoc
+++ b/modules/1237/pages/image2-forestry-report-and-petition.adoc
@@ -23,8 +23,9 @@ necessarily when it was received or reviewed by the Cammer.
 == Jobst Heinrich's Request
 
 Jobst Heinrich's written request is the smaller text found on the Forestry Department's Report.
-The salution of his request is to the right of the text of the Forestry Department. The request itself
-begins below the Forestry Department Report and continues on the backside of the page where it concludes.
+The salution of his request addressed to the nobility is to the right of the text of the Forestry Department.
+The request itself begins below the Forestry Department Report and continues on the backside of the page where
+it concludes.
 
 [cols="1a,1a",frame="none",grid="none"]
 |===
