--- a/modules/1237/pages/image2-forestry-report-and-petition.adoc
+++ b/modules/1237/pages/image2-forestry-report-and-petition.adoc
@@ -95,6 +95,23 @@ An Ewr. Durchlauchten
 und
 Ewr. Hochgräflichen Gnaden
 ergehet daher meine
+unterthänigst bitte
+
+Mir jene Ecke gnädigst für
+einen billigen Preis käuflich zu
+überlassen und dieselbe deßhalb
+baldigst besichtigen und ausmessen
+zu lassen.
+
+In tiefster Ehrfurcht verharre ich
+Ewr. Durchlauchten
+und
+Ewr. Hochgräflichen Gnaden
+
+Durchlauchtigste Fürstin!
+Gnädigst Regierende Fürstin und Frau
+Hochgeborner Graf!
+Gnädigst Regierender Graf und Herr
 ____
 
 |
@@ -119,6 +136,23 @@ i therefore respectfully present this petition
 to your serene highness
 and
 your high comital grace.
+
+I most humbly request
+
+that the corner of land be most graciously sold to me
+for a fair price, and that it therefore
+be inspected as soon as possible and measured
+for this purpose.
+
+With deepest respect, I remain before
+Your Serene Highness
+and
+Your High Comital Grace.
+
+Most Serene Princess!
+Most Gracious Ruling Princess and Lady,
+High-born Count!
+Most Gracious Ruling Count and Lord.
 ____
 |===
 
