--- a/modules/1237/pages/image2-forestry-report-and-petition.adoc
+++ b/modules/1237/pages/image2-forestry-report-and-petition.adoc
@@ -109,24 +109,20 @@ Most Gracious Ruling Princess and Lady
 High-born Count!
 Most Gracious Ruling Count and Lord.
 
-close to my garden, on the common land
-by the road, there lies a sloping corner of land
-which is uncultivated and therefore of no use to anyone,
-and which even causes the road to be uneven.
-since this corner adjoins my garden,
-i would like to cultivate it and purchase it.
+Close to my garden, on the common land by the
+road, there lies a sloping corner of land
+which is uncultivated and therefore of no use to
+anyone, and which even causes the road to be uneven.
+Since this corner adjoins my garden, I would like
+to cultivate it and purchase it.
 
-i therefore respectfully present this petition
-to your serene highness
-and
-your high comital grace.
+I therefore respectfully present this petition
+to your serene highness and your high comital grace.
 
-I most humbly request
-
-that the corner of land be most graciously sold to me
-for a fair price, and that it therefore
-be inspected as soon as possible and measured
-for this purpose.
+I most humbly request that the corner of land
+be most graciously sold to me for a fair price,
+and that it therefore be inspected as soon as
+possible and measured for this purpose.
 
 With deepest respect, I remain before
 Your Serene Highness and
