--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -3,7 +3,9 @@
 * xref:cover.adoc[]
 * xref:timeline.adoc[]
 * xref:image1.adoc[]
-* xref:image2-forestry-report-and-petition.adoc[]
+* xref:image2-overview.adoc[]
+** xref:image2-petition.adoc[]
+** xref:image2-admin-note.adoc[]
 * xref:image3-overview.adoc[] 
 ** xref:image3-4-report-and-response.adoc[]
 * xref:image5-overview.adoc[]
