--- a/todo.adoc
+++ b/todo.adoc
@@ -5,8 +5,8 @@
 
 * Break Document 1 into a landing index page and two subpages: one for the petition and its endorsement, the other for the
 report.
-* For Document 2, I'm undecided if the same organization is needed?
-* In Document #2, the so-called left page of Document #3 is likely part of document #2.
+* Make Document 2 one page--but only after determing if:
+** the left page of Document #3 is likely part of document #2.
 
 == Indexing System for Documents
 
