--- a/todo.adoc
+++ b/todo.adoc
@@ -7,6 +7,7 @@
 report.
 * Make Document 2 one page--but only after determing if:
 ** the left page of Document #3 is likely part of document #2.
+* Decide on titles for documents #5 and #6.
 
 == Indexing System for Documents
 
